# python-test

./: .gitignore  README-가상환경설정.md  README.md
aes256/: README.md  aes256-test.py  aes256-util-test.py  aes256-util2-test.py  aes256_test.py  aes256_util.py  aes256_util2.py  aes256_util3_tts.py
aes256/myenv/: pyvenv.cfg
basic/: array.py  casting.py  comment.py  continue-break.py  dictionary.py  for-loop.py  function.py  if-else.py  import-test.py  quotation.py  syntax.py  throw-ex.py  try-except-finally.py  type-hinting.py  type.py  variable.py  while-loop.py
basic/common/: util2.py
basic/common/exception/: MyCustomError.py
env-dev-prod/: .env.development  .env.production  README.md  clean_project.sh  pyproject.toml  setup.cfg  setup.py  setup_python.sh
env-dev-prod/config/: __init__.py  base_config.py
env-dev-prod/src/my_app/: __init__.py  main.py
env-dev-prod/tests/: test_main.py
fastapi-test/: README.md  main.py
fastapi-test/app/: main.py
fastapi-test/app/schemas/: item_schema.py  qna_schema.py
fastapi-test/app/services/: qna_service.py
logging-test/: .gitignore  LOGGING.md  README-logging.md  README.md  clean_project.sh  pyproject.toml
logging-test/src/config/: base_config.py  logger_config.py  logging_config.py
logging-test/src/myapp/: logging_demo.py  main.py
makefile-test/: Makefile  Makefile copy  Makefile.test  make_run.sh  python_directory_structure.md  run_make.sh
mybatis-xml-ddl-generate/: README.md  generate_ddl.py  pyproject.toml  setup.py  setup_python.sh
mybatis-xml-ddl-generate/src/: generate_ddl.py
mybatis-xml-ddl-generate/src/my_app/: generate_ddl.py
mybatis-xml-ddl-generate/src/my_package/: generate_ddl.py
mybatis-xml-ddl-generate/src/my_package.egg-info/: PKG-INFO  SOURCES.txt
mybatis-xml-ddl-generate/tests/: test_generate_ddl.py  test_generate_ddl_find_all_xml_files.py
python-project-simple-template/: .gitignore  README.md  pyproject.toml  setup.py
python-project-simple-template/src/my_app/: main.py
python-project-simple-template/src/python_project_simple_template.egg-info/: PKG-INFO  SOURCES.txt
python-project-simple-template/src/python_project_template.egg-info/: SOURCES.txt
python-project-template/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py  setup_python.sh
python-project-template/.github/workflows/: ci.yml
python-project-template/src/: main.py
python-project-template/src/python_project_template.egg-info/: PKG-INFO
python-project-template/tests/: test_main.py
restapi-fastapi-test/: .gitignore  README.md
restapi-fastapi-test/app/: main.py
restapi-fastapi-test/app/config/: logger_config.py
restapi-fastapi-test/app/controllers/: item_controller.py  qna_controller.py
sha256/: test.py
simple-project/: README.md  requirements-dev.txt  setup.py
simple-project-test/: setup_python.sh
simple-project/tests/: test_calculator.py
src-tests-pytest/: .gitignore  README.md  setup_python.sh
(+10 files in other folders)
