[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-dev-prod"
version = "0.1"
description = "Python project template with dev/prod environments"
requires-python = ">=3.6"
dependencies = [
    "python-dotenv",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
package-dir = {"": "src"}
packages = ["my_app", "config"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.yaml", "*.json"]

[project.scripts]
myapp = "my_app.main:run"