[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-dev-prod"
version = "0.1.0"
description = "Python project template with dev/prod environments"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "python-dotenv",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
myapp = "my_app.main:run"

[tool.setuptools]
package-dir = {"src" = "src"}
packages = ["my_app", "config"]  # 수정된 부분
package-data = {"*" = ["*.py", "*.txt", "*.yaml", "*.json"]}
