[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "설명 예시"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "python-dotenv",
  "loguru"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "mypy"
]
